--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         </div>
     </div>
 
-    <button class="print-btn" onclick="window.print()">📄 Download PDF</button>
+    <button class="print-btn" onclick="window.print()">📄 Download Resume</button>
 
 </body>
 </html>
