--- a/index.html
+++ b/index.html
@@ -344,7 +344,6 @@
             .contact-item a[href^="mailto"] {
                 color: #333 !important;
                 text-decoration: none !important;
-                pointer-events: none;
             }
             
             .contact-item a[href^="mailto"]::after {
@@ -739,17 +738,22 @@
         </div>
     </div>
 
-    <button class="print-btn" onclick="downloadPDF()">📄 Download PDF</button>
+    <button class="print-btn" onclick="downloadPDF()">📄 Download Resume</button>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-        function downloadPDF() {
-            alert(
-                "📄 To download as PDF:\n\n" +
-                "1. Print dialog will open\n" +
-                "2. Select 'Save as PDF' or 'Print to PDF'\n" +
-                "3. Enable 'Background graphics' option ✓\n" +
-                "4. Click Save\n\n" +
-                "Press OK to continue..."
-            );
-            window.print();
-        }
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+   <script>
+    function downloadPDF() {
+        const element = document.querySelector(".container");
+        const opt = {
+            margin: 0.5,
+            filename: 'Praveen_Reddy_Data_Engineer_Resume.pdf',
+            image: { type: 'jpeg', quality: 1 },
+            html2canvas: { scale: 2 },
+            jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+        };
+        html2pdf().set(opt).from(element).save();
+    }
+    </script>
+
+</body>
+</html>
