--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
         </div>
     </div>
 
-    <button class="print-btn" onclick="downloadPDF()">&#128196; Download PDF</button>
+    <button class="print-btn" onclick="downloadPDF()">&#128196; Download Resume</button>
 
     <script>
         function downloadPDF() {
