--- a/index.html
+++ b/index.html
@@ -568,7 +568,9 @@
             <div class="contact">
                 <!-- FIX 1: Direct mailto link without Cloudflare obfuscation -->
                 <span class="contact-item">
-                    <a href="mailto:praveenreddy.yallayyagari@gmail.com">&#128231; praveenreddy.yallayyagari@gmail.com</a>
+                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#112;&#114;&#97;&#118;&#101;&#101;&#110;&#114;&#101;&#100;&#100;&#121;&#46;&#121;&#97;&#108;&#108;&#97;&#121;&#121;&#97;&#103;&#97;&#114;&#105;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">
+                              📧 praveenreddy.yallayyagari@gmail.com
+                    </a>
                 </span>
                 <span class="contact-item">&#128222; +91-9398242064</span>
                 <span class="contact-item">&#128205; India</span>
