--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                 font-size: 26px;
             }
             .job-header {
-                flex-direction: column;
+                flex-direction: row;
             }
             .print-btn {
                 bottom: 20px;
