--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                 font-size: 14px;
             }
             .social-links {
-                flex-direction: column;
+                flex-direction: row;
                 align-items: center;
             }
         }
