--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             color: #1a1a1a; margin-bottom: 25px; padding-bottom: 10px; border-bottom: 2px solid #e5e5e5;
         }
 
-        .profile-text { font-size: 16px; line-height: 1.8; color: #444; text-align: justify; }
+        .profile-text { font-size: 16px; line-height: 1.8; color: #1a1a1a; text-align: justify; }
 
         .job { margin-bottom: 25px; }
         .job-header { display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 8px; }
@@ -83,7 +83,7 @@
         .job-date { font-size: 15px; color: #666; }
         .company { font-size: 17px; color: #d946ef; font-weight: 600; margin-bottom: 15px; }
         .job ul { padding-left: 20px; }
-        .job li { margin-bottom: 10px; color: #444; line-height: 1.7; text-align: justify; }
+        .job li { margin-bottom: 10px; color: #1a1a1a; line-height: 1.7; text-align: justify; }
         .job li::marker { color: #d946ef; font-weight: bold; }
 
         .achievement {
@@ -96,12 +96,12 @@
             border-radius: 50%; display: flex; align-items: center;
             justify-content: center; font-size: 14px; font-weight: bold;
         }
-        .achievement-text { color: #6b21a8; font-size: 15px; line-height: 1.5; text-align: justify; }
+        .achievement-text { color: #4a1572; font-size: 15px; line-height: 1.5; text-align: justify; font-weight: 500; }
 
         .project { margin-bottom: 20px; }
         .project-name { font-size: 20px; font-weight: 700; color: #1a1a1a; margin-bottom: 8px; }
         .project ul { padding-left: 20px; }
-        .project li { margin-bottom: 8px; color: #444; line-height: 1.6; text-align: justify; }
+        .project li { margin-bottom: 8px; color: #1a1a1a; line-height: 1.6; text-align: justify; }
 
         .skills-container { display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 40px; }
         .skill-tag {
@@ -123,7 +123,7 @@
         .accomplishment-category { margin-bottom: 25px; }
         .accomplishment-category h3 { font-size: 20px; font-weight: 700; color: #1a1a1a; margin-bottom: 12px; }
         .accomplishment-category ul { padding-left: 20px; }
-        .accomplishment-category li { margin-bottom: 8px; color: #444; }
+        .accomplishment-category li { margin-bottom: 8px; color: #1a1a1a; }
         .accomplishment-category li::marker { color: #d946ef; }
 
         .print-btn {
