--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <h2 class="section-title">Education</h2>
             <div class="education-item">
                 <div>
-                    <strong class="degree">B Tech in Computer Science and Engineering (Data Science)</strong>
+                    <strong class="degree">B.Tech in Computer Science and Engineering (Data Science)</strong>
                     <span class="degree-date">Dec 2021 – Apr 2024</span>
                 </div>
                 <p class="institution">Srinivasa Ramanujan Institute of Technology</p>
